# isaaclab-workspace

./: .gitignore  README.md  make_lift_video.py  requirements.txt
docker/: Dockerfile.tactile  container.sh  container_tactile.sh
docs/: index.html
docs/learning/: README.md
docs/superpowers/plans/: 2026-06-07-isaaclab-workspace-reach.md  2026-06-25-insertion-tactile-data-factory-plan-a.md
docs/superpowers/specs/: 2026-06-07-manipulation-rl-reach-design.md  2026-06-20-milestone3-3a-results.md  2026-06-20-milestone3-vla-design.md
scripts/: _common.sh  auto-prompt.md  auto.sh  build_sweep_dashboard.py  claude-auto.service  eval.sh  generate_insertion_dataset.py  setup.sh  train.sh  vla_camera_test.py  vla_play.py
source/insertion_tactile/: pyproject.toml
source/insertion_tactile/insertion_tactile/: __init__.py  insertion_env_cfg.py  oracle.py  recorder.py
source/insertion_tactile/tests/: test_oracle.py  test_recorder.py
source/lift_franka/: pyproject.toml
source/lift_franka/lift_franka/: __init__.py  curriculums.py  lift_env_cfg.py
source/reach_franka/: pyproject.toml
source/reach_franka/reach_franka/: __init__.py  reach_env_cfg.py
